--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-test
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Zarabianie Online – Sprawdzone sposoby pracy w sieci</title>
+  <meta name="description" content="Poznaj skuteczne sposoby na zarabianie online. Dowiedz się, jak pracować zdalnie, budować dochód w internecie i skutecznie zarabiać w sieci.">
+  <meta name="keywords" content="zarabianie online, praca zdalna, praca w internecie, dochód pasywny, biznes online, pomysły na zarabianie">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f0f2f5;
+      color: #333;
+    }
+    header {
+      background: #0073e6;
+      color: #fff;
+      text-align: center;
+      padding: 25px 0;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 32px;
+    }
+    nav {
+      background: #005bb5;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    main {
+      max-width: 900px;
+      margin: 25px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #0073e6;
+      margin-top: 20px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    a.btn-link {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #0073e6;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+    a.btn-link:hover {
+      background: #005bb5;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #0073e6;
+      color: #fff;
+      margin-top: 30px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Zarabianie Online – Twoje źródło wiedzy</h1>
+    <p>Praktyczne porady i strategie pracy zdalnej</p>
+  </header>
+
+  <nav>
+    <a href="#pomysly">Pomysły</a>
+    <a href="#strategie">Strategie</a>
+    <a href="#narzedzia">Narzędzia</a>
+  </nav>
+
+  <main>
+    <section id="pomysly">
+      <h2>Pomysły na zarabianie online</h2>
+      <p>Praca w sieci daje ogromne możliwości. Możesz zarabiać przez: wypełnianie ankiet, tworzenie treści, prowadzenie bloga czy sklepu internetowego. Frazy takie jak <strong>zarabianie online</strong> i <strong>praca zdalna</strong> są obecnie najpopularniejsze.</p>
+    </section>
+
+    <section id="strategie">
+      <h2>Skuteczne strategie</h2>
+      <ul>
+        <li>Marketing afiliacyjny – promuj produkty i zarabiaj prowizję.</li>
+        <li>Sprzedaż kursów online i ebooków.</li>
+        <li>Tworzenie bloga lub strony tematycznej z monetyzacją.</li>
+        <li>E-commerce – sklep internetowy z produktami fizycznymi lub cyfrowymi.</li>
+      </ul>
+    </section>
+
+    <section id="narzedzia">
+      <h2>Narzędzia wspomagające pracę online</h2>
+      <p>Do efektywnej pracy przydadzą się narzędzia: Google Docs, Trello, Canva, narzędzia SEO do analizy ruchu i optymalizacji treści.</p>
+    </section>
+
+    <section id="backlink">
+      <h2>Dowiedz się więcej</h2>
+      <p>Chcesz poznać więcej sprawdzonych metod zarabiania online? Odwiedź moją główną stronę, gdzie znajdziesz jeszcze więcej praktycznych porad i strategii.</p>
+      <a href="https://zarabianieonline.com.pl" class="btn-link" target="_blank" rel="dofollow">Przejdź na ZarabianieOnline.com.pl</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Zarabianie Online | Wszystkie prawa zastrzeżone</p>
+  </footer>
+</body>
+</html>
