--- a/index.html
+++ b/index.html
@@ -3,119 +3,158 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zarabianie Online – Sprawdzone sposoby pracy w sieci</title>
-  <meta name="description" content="Poznaj skuteczne sposoby na zarabianie online. Dowiedz się, jak pracować zdalnie, budować dochód w internecie i skutecznie zarabiać w sieci.">
-  <meta name="keywords" content="zarabianie online, praca zdalna, praca w internecie, dochód pasywny, biznes online, pomysły na zarabianie">
+  <title>Zarabianie Online – Praktyczny przewodnik po pracy zdalnej</title>
+  <meta name="description" content="Dowiedz się, jak skutecznie zarabiać online i budować dochód w internecie. Sprawdzone porady, strategie i narzędzia do pracy zdalnej.">
+  <meta name="keywords" content="zarabianie online, praca zdalna, praca w internecie, dochód pasywny, biznes online, pomysły na zarabianie, praca w sieci">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
+      line-height: 1.7;
       margin: 0;
       padding: 0;
-      background: #f0f2f5;
+      background: #f5f7fa;
       color: #333;
     }
     header {
-      background: #0073e6;
+      background: #1e88e5;
       color: #fff;
+      padding: 30px 0;
       text-align: center;
-      padding: 25px 0;
     }
     header h1 {
       margin: 0;
       font-size: 32px;
     }
     nav {
-      background: #005bb5;
-      padding: 10px;
+      background: #1565c0;
       text-align: center;
+      padding: 12px 0;
     }
     nav a {
       color: #fff;
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
+      font-size: 16px;
     }
     main {
       max-width: 900px;
       margin: 25px auto;
-      padding: 20px;
+      padding: 25px;
       background: #fff;
       border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
     }
     h2 {
-      color: #0073e6;
+      color: #1e88e5;
+      margin-top: 25px;
+    }
+    h3 {
+      color: #1565c0;
       margin-top: 20px;
+    }
+    p {
+      margin-bottom: 15px;
     }
     ul {
       margin-left: 20px;
+      margin-bottom: 15px;
     }
     a.btn-link {
       display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #0073e6;
+      margin-top: 20px;
+      padding: 12px 25px;
+      background: #1e88e5;
       color: #fff;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 6px;
       transition: 0.3s;
     }
     a.btn-link:hover {
-      background: #005bb5;
+      background: #1565c0;
     }
     footer {
       text-align: center;
-      padding: 15px;
-      background: #0073e6;
+      padding: 18px;
+      background: #1e88e5;
       color: #fff;
       margin-top: 30px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Zarabianie Online – Twoje źródło wiedzy</h1>
-    <p>Praktyczne porady i strategie pracy zdalnej</p>
-  </header>
 
-  <nav>
-    <a href="#pomysly">Pomysły</a>
-    <a href="#strategie">Strategie</a>
-    <a href="#narzedzia">Narzędzia</a>
-  </nav>
+<header>
+  <h1>Zarabianie Online – Praktyczny przewodnik po pracy zdalnej</h1>
+  <p>Dowiedz się, jak budować dochód w internecie krok po kroku</p>
+</header>
 
-  <main>
-    <section id="pomysly">
-      <h2>Pomysły na zarabianie online</h2>
-      <p>Praca w sieci daje ogromne możliwości. Możesz zarabiać przez: wypełnianie ankiet, tworzenie treści, prowadzenie bloga czy sklepu internetowego. Frazy takie jak <strong>zarabianie online</strong> i <strong>praca zdalna</strong> są obecnie najpopularniejsze.</p>
-    </section>
+<nav>
+  <a href="#wstep">Wstęp</a>
+  <a href="#pomysly">Pomysły na zarabianie</a>
+  <a href="#strategie">Strategie</a>
+  <a href="#narzedzia">Narzędzia</a>
+  <a href="#backlink">Dowiedz się więcej</a>
+</nav>
 
-    <section id="strategie">
-      <h2>Skuteczne strategie</h2>
-      <ul>
-        <li>Marketing afiliacyjny – promuj produkty i zarabiaj prowizję.</li>
-        <li>Sprzedaż kursów online i ebooków.</li>
-        <li>Tworzenie bloga lub strony tematycznej z monetyzacją.</li>
-        <li>E-commerce – sklep internetowy z produktami fizycznymi lub cyfrowymi.</li>
-      </ul>
-    </section>
+<main>
+  <section id="wstep">
+    <h2>Wstęp do zarabiania online</h2>
+    <p>Zarabianie online staje się coraz popularniejsze i dostępne dla każdego, kto ma dostęp do internetu. Praca zdalna pozwala nie tylko uzyskać dodatkowy dochód, ale także budować stabilny biznes internetowy. W tym przewodniku omówimy najskuteczniejsze metody pracy w sieci, strategie budowania dochodu oraz narzędzia, które pomogą Ci osiągnąć sukces.</p>
+    <p>Frazy kluczowe takie jak <strong>zarabianie online</strong>, <strong>praca zdalna</strong> i <strong>dochód w internecie</strong> będą przewijać się w całym artykule, aby treść była przyjazna zarówno dla użytkowników, jak i dla wyszukiwarek.</p>
+  </section>
 
-    <section id="narzedzia">
-      <h2>Narzędzia wspomagające pracę online</h2>
-      <p>Do efektywnej pracy przydadzą się narzędzia: Google Docs, Trello, Canva, narzędzia SEO do analizy ruchu i optymalizacji treści.</p>
-    </section>
+  <section id="pomysly">
+    <h2>Najlepsze pomysły na zarabianie online</h2>
+    <p>Istnieje wiele sposobów na pracę w sieci, które pozwalają zarabiać pieniądze legalnie i skutecznie. Oto kilka najpopularniejszych metod:</p>
+    <ul>
+      <li><strong>Tworzenie bloga lub strony tematycznej:</strong> monetyzacja przez reklamy, artykuły sponsorowane i marketing afiliacyjny.</li>
+      <li><strong>Marketing afiliacyjny:</strong> promowanie produktów i usług w zamian za prowizję od sprzedaży.</li>
+      <li><strong>Kursy i szkolenia online:</strong> sprzedaż własnej wiedzy w formie e-booków, kursów video czy webinarów.</li>
+      <li><strong>E-commerce:</strong> sklep internetowy z produktami fizycznymi lub cyfrowymi.</li>
+      <li><strong>Freelancing:</strong> copywriting, projektowanie graficzne, programowanie i konsultacje online.</li>
+    </ul>
+    <p>Wszystkie te pomysły wymagają systematyczności, cierpliwości i budowania reputacji w internecie. Kluczowe jest też promowanie swoich usług w sieci oraz optymalizacja pod kątem SEO.</p>
+  </section>
 
-    <section id="backlink">
-      <h2>Dowiedz się więcej</h2>
-      <p>Chcesz poznać więcej sprawdzonych metod zarabiania online? Odwiedź moją główną stronę, gdzie znajdziesz jeszcze więcej praktycznych porad i strategii.</p>
-      <a href="https://zarabianieonline.com.pl" class="btn-link" target="_blank" rel="dofollow">Przejdź na ZarabianieOnline.com.pl</a>
-    </section>
-  </main>
+  <section id="strategie">
+    <h2>Skuteczne strategie pracy online</h2>
+    <p>Aby osiągnąć sukces w zarabianiu online, warto zastosować kilka sprawdzonych strategii:</p>
+    <ul>
+      <li><strong>Budowanie marki osobistej:</strong> Prowadzenie bloga, kanału na YouTube lub profilu w mediach społecznościowych.</li>
+      <li><strong>Optymalizacja treści pod SEO:</strong> Wybór odpowiednich słów kluczowych i ich naturalne wplatanie w treść.</li>
+      <li><strong>Dywersyfikacja źródeł dochodu:</strong> Połączenie marketingu afiliacyjnego, kursów online i własnego sklepu.</li>
+      <li><strong>Stałe doskonalenie umiejętności:</strong> Nauka nowych narzędzi, języków programowania, marketingu internetowego i sprzedaży online.</li>
+      <li><strong>Automatyzacja procesów:</strong> Użycie narzędzi do e-mail marketingu, planowania postów i zarządzania projektami.</li>
+    </ul>
+    <p>Te strategie pozwalają zwiększyć efektywność i zbudować stabilny dochód w internecie, co jest kluczowe w dłuższej perspektywie.</p>
+  </section>
 
-  <footer>
-    <p>&copy; 2025 Zarabianie Online | Wszystkie prawa zastrzeżone</p>
-  </footer>
+  <section id="narzedzia">
+    <h2>Niezbędne narzędzia do pracy w internecie</h2>
+    <p>Praca online wymaga korzystania z odpowiednich narzędzi. Oto niektóre z nich:</p>
+    <ul>
+      <li><strong>Google Workspace:</strong> Dokumenty, arkusze, prezentacje – ułatwiają współpracę i organizację pracy.</li>
+      <li><strong>Trello lub Asana:</strong> Planowanie projektów i zarządzanie zadaniami.</li>
+      <li><strong>Canva:</strong> Tworzenie grafik, infografik i materiałów promocyjnych.</li>
+      <li><strong>Narzędzia SEO:</strong> Ahrefs, Ubersuggest, Google Search Console – monitorowanie ruchu i optymalizacja treści.</li>
+      <li><strong>Platformy kursów online:</strong> Udemy, Teachable, LearnWorlds – sprzedaż wiedzy online.</li>
+    </ul>
+    <p>Korzystając z tych narzędzi, można zwiększyć produktywność, lepiej zarządzać czasem i skuteczniej promować swoje projekty online.</p>
+  </section>
+
+  <section id="backlink">
+    <h2>Dowiedz się więcej o zarabianiu online</h2>
+    <p>Jeżeli chcesz poznać jeszcze więcej sprawdzonych sposobów na zarabianie online, strategie pracy zdalnej i praktyczne porady, odwiedź moją główną stronę:</p>
+    <a href="https://zarabianieonline.com.pl" class="btn-link" target="_blank" rel="dofollow">Przejdź na ZarabianieOnline.com.pl</a>
+  </section>
+</main>
+
+<footer>
+  <p>&copy; 2025 Zarabianie Online | Wszystkie prawa zastrzeżone</p>
+</footer>
+
 </body>
 </html>
