--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zarabianie Online – Praktyczny przewodnik po pracy zdalnej</title>
-  <meta name="description" content="Dowiedz się, jak skutecznie zarabiać online i budować dochód w internecie. Sprawdzone porady, strategie i narzędzia do pracy zdalnej.">
+  <title>Zarabianie Online 2025 – Sprawdzone metody pracy zdalnej i budowania dochodu w sieci</title>
+  <meta name="description" content="Dowiedz się, jak zarabiać online w 2025 roku. Sprawdzone sposoby na pracę zdalną, budowanie dochodu w internecie i skuteczny biznes w sieci.">
   <meta name="keywords" content="zarabianie online, praca zdalna, praca w internecie, dochód pasywny, biznes online, pomysły na zarabianie, praca w sieci">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="google-site-verification" content="bwm0jixnodO9s8NqXkgZ9HGAr2GBrAGz2C3VN3iiosg" />
   <style>
     body {
       font-family: Arial, sans-serif;
