--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Dowiedz się, jak zarabiać online w 2025 roku. Sprawdzone sposoby na pracę zdalną, budowanie dochodu w internecie i skuteczny biznes w sieci.">
   <meta name="keywords" content="zarabianie online, praca zdalna, praca w internecie, dochód pasywny, biznes online, pomysły na zarabianie, praca w sieci">
   <link rel="icon" href="favicon-32x32.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <meta name="google-site-verification" content="bwm0jixnodO9s8NqXkgZ9HGAr2GBrAGz2C3VN3iiosg" />
   <style>
     body {
