--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zarabianie Online 2025 – Sprawdzone metody pracy zdalnej i budowania dochodu w sieci</title>
+  <title>Zarabianie Online – Praca zdalna i dochód w sieci</title>
   <meta name="description" content="Dowiedz się, jak zarabiać online w 2025 roku. Sprawdzone sposoby na pracę zdalną, budowanie dochodu w internecie i skuteczny biznes w sieci.">
   <meta name="keywords" content="zarabianie online, praca zdalna, praca w internecie, dochód pasywny, biznes online, pomysły na zarabianie, praca w sieci">
   <link rel="icon" href="favicon-32x32.png" type="image/x-icon">
@@ -89,7 +89,7 @@
 <body>
 
 <header>
-  <h1>Zarabianie Online – Praktyczny przewodnik po pracy zdalnej</h1>
+  <h1>Zarabianie Online – Praca zdalna i dochód w sieci</h1>
   <p>Dowiedz się, jak budować dochód w internecie krok po kroku</p>
 </header>
 
@@ -144,7 +144,7 @@
       <li><strong>Narzędzia SEO:</strong> Ahrefs, Ubersuggest, Google Search Console – monitorowanie ruchu i optymalizacja treści.</li>
       <li><strong>Platformy kursów online:</strong> Udemy, Teachable, LearnWorlds – sprzedaż wiedzy online.</li>
     </ul>
-    <p>Korzystając z tych narzędzi, można zwiększyć produktywność, lepiej zarządzać czasem i skuteczniej promować swoje projekty online.</p>
+    <p>Korzystając z tych narzędzi, można zwiększyć produktywność, lepiej zarządzać czasem i skuteczniej promować swoje projekty online. Zarabianie Online – Praca zdalna i dochód w sieci</p>
   </section>
 
   <section id="backlink">
